tests initiation